--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
                         <p> 17 Fred</p>
                         <div class="card">
                             <div class="card-header">
-                                <p>Matic</p>
+                                <p>Fred</p>
                                 <div class="photo">
-                                    <img src="images/matic.jpg">
+                                    <img src="images/mu/fred.jpg" alt="fred">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>30yr</p>
+                                        <p>25yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,94m</p>
+                                        <p>1,69m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>Serbia</p>
+                                        <p>Brazil</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>36</p>
+                                    <p>7</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
@@ -93,7 +93,7 @@
                             <div class="card-header">
                                 <p>Matic</p>
                                 <div class="photo">
-                                    <img src="images/matic.jpg">
+                                    <img src="images/mu/matic.jpg" alt="Matic">
                                 </div>
                             </div>
                             <div class="info-topwrap">
