home cards done

--- a/index.html
+++ b/index.html
@@ -27,26 +27,230 @@
                     <div class="formation player-1">
                         <img src="images/goolkepeer-MU.png">
                         <p> 1 De Gea</p>
+                        <div class="card" style="display: block">
+                            <div class="card-header">
+                                <p>De Gea</p>
+                                <div class="photo">
+                                    <img src="images/mu/de-gea.jpg" alt="De Gea">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>28yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,92m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>Spain</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>14</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>0</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-2">
                         <img src="images/mu-uni.png">
                         <p> 3 Bailly</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Bailly</p>
+                                <div class="photo">
+                                    <img src="images/mu/bailly.jpg" alt="Bailly">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>24yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,77m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>Ivory Coast</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>1</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>0</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-3">
                         <img src="images/mu-uni.png">
                         <p> 4 Jones</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Jones</p>
+                                <div class="photo">
+                                    <img src="images/mu/djons.jpg" alt="Jones">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>26yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,8m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>England</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>2</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>0</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-4">
                         <img src="images/mu-uni.png">
                         <p> 23 Shaw</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Shaw</p>
+                                <div class="photo">
+                                    <img src="images/mu/shaw.jpg" alt="Shaw">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>23yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,85m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>England</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>12</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>1</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-5">
                         <img src="images/mu-uni.png">
-                        <p> 25 Valencia</p>
+                        <p>25 Valencia</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Valencia</p>
+                                <div class="photo">
+                                    <img src="images/mu/valencia.jpg" alt="Valencia">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>33yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,8m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>Ecuador</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>2</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>0</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-6">
                         <img src="images/mu-uni.png">
                         <p> 6 Pogba</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Pogba</p>
+                                <div class="photo">
+                                    <img src="images/mu/pogba.jpg" alt="Pogba">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>25yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,91m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>France</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>13</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>3</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-7">
                         <img src="images/mu-uni.png">
@@ -127,14 +331,116 @@
                     <div class="formation player-9">
                         <img src="images/mu-uni.png">
                         <p> 9 Lukaku</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Lukaku</p>
+                                <div class="photo">
+                                    <img src="images/mu/lukaku.jpg" alt="Lukaku">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>25yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,9m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>Belgium</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>13</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>5</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-10">
                         <img src="images/mu-uni.png">
                         <p> 7 Sanchez</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Sanchez</p>
+                                <div class="photo">
+                                    <img src="images/mu/Sanchez.jpg" alt="Sanchez">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>29yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,69m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>	Chile</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>10</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>1</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="formation player-11">
                         <img src="images/mu-uni.png">
                         <p> 10 Rashford</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <p>Rashford</p>
+                                <div class="photo">
+                                    <img src="images/mu/rashford.jpg" alt="Rashford">
+                                </div>
+                            </div>
+                            <div class="info-topwrap">
+                                <div class="info-top">
+                                    <div class="age">
+                                        Yars
+                                        <p>21yr</p>
+                                    </div>
+                                    <div class="height">
+                                        Height
+                                        <p>1,8m</p>
+                                    </div>
+                                    <div class="origin">
+                                        Origin
+                                        <p>England</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info-bottom">
+                                <div class="games">
+                                    <p>Games</p>
+                                    <p>11</p>
+                                </div>
+                                <div class="goals">
+                                    <p>Goals</p>
+                                    <p>2</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
