home cards done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -27,7 +28,7 @@
                     <div class="formation player-1">
                         <img src="images/goolkepeer-MU.png">
                         <p> 1 De Gea</p>
-                        <div class="card" style="display: block">
+                        <div class="card">
                             <div class="card-header">
                                 <p>De Gea</p>
                                 <div class="photo">
