--- a/index.html
+++ b/index.html
@@ -451,34 +451,34 @@
                     </div>
                     <div class="formation juve_player-1">
                         <img src="images/juve/goolkepeer-juve.png">
-                        <p> 1 Perin</p>
-                        <div class="card">
+                        <p> 22 Perin</p>
+                        <div class="away_card">
                             <div class="card-header">
-                                <p>De Gea</p>
+                                <p>Perin</p>
                                 <div class="photo">
-                                    <img src="images/mu/de-gea.jpg" alt="De Gea">
+                                    <img src="images/juve/perin.png" alt="perin">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>28yr</p>
+                                        <p>26yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,92m</p>
+                                        <p>1,88m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>Spain</p>
+                                        <p>Italy</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>14</p>
+                                    <p>2</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
@@ -490,7 +490,7 @@
                     <div class="formation juve_player-2">
                         <img src="images/juve/juve_form.png" alt="">
                         <p> 4 Benatia</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Bailly</p>
                                 <div class="photo">
@@ -528,7 +528,7 @@
                     <div class="formation juve_player-3">
                         <img src="images/juve/juve_form.png" alt="">
                         <p> 3 Chiellini</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Jones</p>
                                 <div class="photo">
@@ -566,7 +566,7 @@
                     <div class="formation juve_player-4">
                         <img src="images/juve/juve_form.png" alt="">
                         <p> 12 Alex Sandro</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Shaw</p>
                                 <div class="photo">
@@ -604,7 +604,7 @@
                     <div class="formation juve_player-5">
                         <img src="images/juve/juve_form.png" alt="">
                         <p>22 Cancelo</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Valencia</p>
                                 <div class="photo">
@@ -642,7 +642,7 @@
                     <div class="formation juve_player-6">
                         <img src="images/juve/juve_form.png" alt="">
                         <p> 6 Khedira</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Pogba</p>
                                 <div class="photo">
@@ -680,7 +680,7 @@
                     <div class="formation juve_player-7">
                         <img src="images/juve/juve_form.png" alt="">
                         <p>5 Pjanic</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Fred</p>
                                 <div class="photo">
@@ -719,7 +719,7 @@
                         <img src="images/juve/juve_form.png" alt="">
 
                         <p> 23 Emre Can</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Matic</p>
                                 <div class="photo">
@@ -757,7 +757,7 @@
                     <div class="formation juve_player-9">
                         <img src="images/juve/juve_form.png" alt="">
                         <p> 17 Mandzukic</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Lukaku</p>
                                 <div class="photo">
@@ -795,7 +795,7 @@
                     <div class="formation juve_player-10">
                         <img src="images/juve/juve_form.png" alt="">
                         <p> 7 Ronaldo</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Sanchez</p>
                                 <div class="photo">
@@ -833,7 +833,7 @@
                     <div class="formation juve_player-11">
                         <img src="images/juve/juve_form.png" alt="">
                         <p> 11 Douglas Costa</p>
-                        <div class="card">
+                        <div class="away_card">
                             <div class="card-header">
                                 <p>Rashford</p>
                                 <div class="photo">
